// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-member-group should create a member group 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`create-member-group should handle existing member group 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 400",
      "type": "text",
    },
  ],
}
`;
